[package]
name = "sqlstate-macros"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "Procedural macros for sqlstate."
repository = "https://github.com/lucis-fluxum/sqlstate-rs"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
syn = { version = "1.0.0", features = ["full"] }
quote = "1.0.0"
