[package]
name = "sqlstate-macros"
version = "0.1.0"
description = "Procedural macros for sqlstate."
repository = "https://github.com/0xSiO/sqlstate-rs"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
