[package]
name = "sqlstate"
version = "0.1.0"
description = "Representations and parsing logic for SQLSTATE return codes."
repository = "https://github.com/0xSiO/sqlstate-rs"
keywords = ["sql", "error"]
categories = ["database", "data-structures"]
license = "MIT"
edition = "2018"

[features]
postgres = []

[dependencies]
sqlstate-macros = { path = "../sqlstate-macros", version = "0.1.0" }
thiserror = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
